*****************
* StateS v. 0.4 *
*****************

- 2017-08-06 - V 0.4   - Undo is finally here!

*****************
* StateS v. 0.3 *
*****************

- 2017-05-20 - V 0.3.K - Finally corrected the annoying furtive popup on Windows; Enhanced zoom level and view position management, and save and restore them with machines.
- 2016-10-06 - V 0.3.J - Disable delete key when in simulation mode; Small UI enhancements.
- 2016-09-10 - V 0.3.I - Reworked action management to allow multiple actions on same signal (useful to allow different ranges actions); Allow action reordering; Small UI enhancements;
- 2016-08-07 - V 0.3.H - Reworked truth table display; Enhanced lists display; Added icons; Reworked some tabs display.
- 2016-07-26 - V 0.3.G - Small interface enhancements: toolbar placement, check user input values for correctness, signal lists management, graphic items selection.
- 2016-05-16 - V 0.3.F - Restored truth table feature (0.3.C regression); Corrected bug with tab key on signal creation.
- 2016-05-15 - V 0.3.E - Added a way to move condition position on a transition; Display errors encountered while loading file to user; Added control over ratio in image export; Better shape selection on scene.
- 2016-05-07 - V 0.3.D - Corrected image export display.
- 2016-05-06 - V 0.3.C - Small UI enhancements; Allow drag-and-dropping files on UI to load; Added export options.
- 2015-12-13 - V 0.3.B - VHDL export now correctly handles transition conditions; Began adressing output generation in VHDL export; More information from verifier tool.
- 2015-12-06 - V 0.3.A - Allowed actions kinds is now better handled + better rendering; Enhancments to range and bit adressing in signals; Allow constant definition in equation.